[gd_scene load_steps=3 format=3 uid="uid://dcoylvxxefxm2"]

[ext_resource type="Script" path="res://scripts/powerup_template.gd" id="1_3igde"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k6cxs"]
size = Vector2(71.73, 70.78)

[node name="PowerupTemplate" type="Area2D"]
script = ExtResource("1_3igde")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_k6cxs")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 45.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
